 -- In switch plugin, added plugin_id symbol to plugins and wrapped
    switch_jobinfo_t with dynamic_plugin_data_t in interface calls in
    order to pass switch information between clusters with different switch
    types.

RPMBUILD CHANGES
================

CONFIGURATION FILE CHANGES (see man appropriate man page for details)
=====================================================================

COMMAND CHANGES (see man pages for details)
===========================================

OTHER CHANGES
=============

API CHANGES
===========

Changed members of the following structs
========================================

Added members to the following struct definitions
=================================================
In slurmbdb_cluster_fed_t: Added feature_list to hold cluster features.
In job_desc_msg_t: Added cluster_features for passing cluster features to
	controller.
		   Renamed fed_siblings to fed_siblings_active.
		   Added fed_siblings_viable.
In job_info_t: Added cluster_features for passing back a job's cluster features
	from the controller.
               Renamed fed_siblings[_str] fed_siblings_active[_str]
	       Added fed_siblings_viable[_str].
In struct job_details: Added cluster_features to hold requestsed cluster
	features.
In job_fed_details_t: Rename siblings to siblings_active.
		      Added siblings_viable.

Added the following struct definitions
======================================
In job_alloc_info_msg_t: add req_cluster to indicate where the request is coming
	from.

Removed members from the following struct definitions
=====================================================

Changed the following enums and #defines
========================================

Added the following API's
=========================

Changed the following API's
============================

Removed the following API's
===========================
Removed unused slurm_allocation_lookup() and rename slurm_allocation_lookup_lite() to
	slurm_allocation_lookup().