@@ -10104,12 +10104,28 @@ static void
 _pack_job_info_request_msg(job_info_request_msg_t * msg, Buf buffer,
 			   uint16_t protocol_version)
 {
+	uint32_t count = NO_VAL;
+	ListIterator itr;
+
 	xassert(msg);
 	xassert(buffer);
 
 	if (protocol_version >= SLURM_17_11_PROTOCOL_VERSION) {
 		pack_time(msg->last_update, buffer);
 		pack16((uint16_t)msg->show_flags, buffer);
+
+		if (msg->job_ids)
+			count = list_count(msg->job_ids);
+
+		pack32(count, buffer);
+		if (count && count != NO_VAL) {
+			itr = list_iterator_create(msg->job_ids);
+			uint32_t *uint32_ptr;
+			while ((uint32_ptr = list_next(itr)))
+				pack32(*uint32_ptr, buffer);
+			list_iterator_destroy(itr);
+		}
+
 	} else if (protocol_version >= SLURM_MIN_PROTOCOL_VERSION) {
 		pack_time(msg->last_update, buffer);
 		pack16((uint16_t)msg->show_flags, buffer);
@@ -10124,6 +10140,9 @@ _unpack_job_info_request_msg(job_info_request_msg_t** msg,
 			     Buf buffer,
 			     uint16_t protocol_version)
 {
+	int       i;
+	uint32_t  count;
+	uint32_t *uint32_ptr;
 	job_info_request_msg_t *job_info;
 
 	job_info = xmalloc(sizeof(job_step_info_request_msg_t));
@@ -10132,6 +10151,18 @@ _unpack_job_info_request_msg(job_info_request_msg_t** msg,
 	if (protocol_version >= SLURM_17_11_PROTOCOL_VERSION) {
 		safe_unpack_time(&job_info->last_update, buffer);
 		safe_unpack16(&job_info->show_flags, buffer);
+
+		safe_unpack32(&count, buffer);
+		if (count != NO_VAL) {
+			job_info->job_ids =
+				list_create(slurm_destroy_uint32_ptr);
+			for (i = 0; i < count; i++) {
+				uint32_ptr = xmalloc(sizeof(uint32_t));
+				safe_unpack32(uint32_ptr, buffer);
+				list_append(job_info->job_ids, uint32_ptr);
+				uint32_ptr = NULL;
+			}
+		}
 	} else if (protocol_version >= SLURM_MIN_PROTOCOL_VERSION) {
 		safe_unpack_time(&job_info->last_update, buffer);
 		safe_unpack16(&job_info->show_flags, buffer);
