@@ -91,6 +91,8 @@ In struct job_details: Added cluster_features to hold requestsed cluster
 	features.
 In job_fed_details_t: Rename siblings to siblings_active.
 		      Added siblings_viable.
+In job_info_request_msg: Added job_ids to be able to request job info for
+		       specific jobs.
 
 Added the following struct definitions
 ======================================
